--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,100;1,400;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700&display=swap");
 
 :root {
   --purple: #4932b9;
@@ -33,6 +33,48 @@ body {
   width: 100%;
 }
 
+.navbar {
+  background: hotpink;
+  grid-area: nav;
+  /* display: flex; */
+}
+
+.navbar__content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 0 0 0 80px;
+  animation: 2s navbar 0.5s ease-in-out;
+}
+
+@keyframes navbar {
+  0% {
+    transform: translateY(-200px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+.navbar__content img {
+  width: 50px;
+}
+
+.navbar__content ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+  padding: 0;
+  width: 450px;
+}
+
+.navbar__content ul li a {
+  color: var(--purple);
+  font-weight: 300;
+  text-decoration: none;
+}
+
 .loader {
   display: flex;
   align-items: center;
@@ -42,7 +84,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 3;
-  animation: loader 2s linear forwards;
+  animation: loader 0s linear forwards;
 }
 
 @keyframes loader {
@@ -89,9 +131,11 @@ body {
   100% {
     transform: scale(0.2);
   }
+
   40% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1);
   }
