feat: Contenido principal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,8 @@ body {
 }
 
 .navbar {
-  background: hotpink;
   grid-area: nav;
-  /* display: flex; */
+  display: flex;
 }
 
 .navbar__content {
@@ -73,6 +72,43 @@ body {
   color: var(--purple);
   font-weight: 300;
   text-decoration: none;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 80px;
+  grid-area: section;
+  animation: 2s main-content 0.5s ease-in-out;
+}
+
+.main-content p:first-child {
+  font-size: 36px;
+  font-weight: 300;
+  margin: 0 0 -14px 44px;
+}
+
+.main-content h1 {
+  font-size: 48px;
+  font-weight: 700;
+  margin: 0 0 28px 0;
+}
+
+.main-content p:last-child {
+  font-weight: 100;
+  margin: 0;
+  width: 60%;
+}
+
+@keyframes main-content {
+  0% {
+    transform: translateY(-600px);
+  }
+
+  100% {
+    transform: translateY(0px);
+  }
 }
 
 .loader {
