--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700&display=swap");
 
 :root {
-  --purple: #4932b9;
-  --yellow: #e19e1a;
-  --blue: #1d4fe8;
+  --green: #53743d;
+  --yellow: #b28644;
+  --black: #151821;
 }
 
 body {
@@ -69,7 +69,7 @@ body {
 }
 
 .navbar__content ul li a {
-  color: var(--purple);
+  color: var(--green);
   font-weight: 300;
   text-decoration: none;
 }
@@ -109,6 +109,60 @@ body {
   100% {
     transform: translateY(0px);
   }
+}
+
+.side-content {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  align-items: center;
+  grid-area: aside;
+}
+
+.side-content p {
+  transform: rotate(-90deg);
+  font-size: 36px;
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+  opacity: 0;
+  animation-name: side-content-text;
+  animation-duration: 0.5s;
+  animation-delay: 2.5s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes side-content-text {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.side-content img {
+  width: 100%;
+  grid-column: 2 / 6;
+  grid-row: 1 / 2;
+  animation: 2s side-content-img 0.5s ease-in-out;
+}
+
+@keyframes side-content-img {
+  0% {
+    transform: translateX(600px);
+  }
+
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+.side-content div {
+  background: var(--black);
+  grid-column: 4 / 7;
+  grid-row: 1 / 2;
+  height: 100%;
 }
 
 .loader {
