--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700&display=swap");
 
 :root {
-  --green: #53743d;
+  --red: #992425;
   --yellow: #b28644;
   --black: #151821;
 }
@@ -69,7 +69,7 @@ body {
 }
 
 .navbar__content ul li a {
-  color: var(--green);
+  color: var(--red);
   font-weight: 300;
   text-decoration: none;
 }
@@ -167,7 +167,7 @@ body {
 
 .footer {
   display: flex;
-  background: var(--yellow);
+  background: var(--red);
   justify-content: space-evenly;
   align-items: flex-end;
   border-radius: 0 80px 0 0;
@@ -207,7 +207,7 @@ body {
 .footer div {
   display: flex;
   justify-content: center;
-  background: var(--green);
+  background: var(--yellow);
   width: 130px;
   height: 60%;
   border-radius: 20px 20px 0 0;
@@ -277,4 +277,20 @@ body {
   50% {
     transform: scale(1);
   }
+}
+
+.visible {
+  display: grid;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal {
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  z-index: 4;
 }
