--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -1,10 +1,25 @@
 @media (max-width: 575.98px) {
+  .menu_image {
+    display: block;
+  }
+
+  body {
+    overflow-y: scroll;
+  }
+
   .navbar__content {
-    width: 0;
-    padding: 0 0 0 20px;
+    padding: 0 1em 0 20px;
+  }
+
+  .navbar__content ul {
+    display: none;
   }
 
   .container {
+    grid-template-areas:
+    "nav     nav"
+    "section aside"
+    "footer  aside";
     grid-template-rows: 10% 60% 30%;
   }
 
